--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -141,15 +141,9 @@
 
     width: 40rem;
 
-    // min-height: 30rem;
+    min-height: 28rem;
     // height: 26rem;
 
-    height: max-content;
-
-
-    @include mixins.least-large-screen {
-        height: 35rem;
-    }
 
     border-radius: 12px;
     background-color: #f0f0f0;
@@ -160,6 +154,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    justify-content: center;
+    
+    row-gap: 1rem;
     
     position: relative;
 
@@ -199,6 +197,14 @@
     &:last-of-type {
         margin-right: 1.5rem;
     }
+
+
+    height: max-content;
+
+
+    // @include mixins.least-large-screen {
+    //     height: 30rem;
+    // }
 }
 
 .avatar-wrapper-container {
